--- a/css/style.css
+++ b/css/style.css
@@ -1,89 +1,513 @@
 * {
-box-sizing:border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .container {
-    max-width: 1194px;
-    margin: auto;
+  max-width: 1194px;
+  margin: auto;
 }
 
 .header {
-    display: flex;
-    align-items: center;
-    padding: 10px 0;
+  display: flex;
+  align-items: center;
+  padding: 10px 0;
 }
 
 .search-form {
-    margin-left: 76px;
-    background: rgba(238, 238, 238, 0.71);
-    border-radius: 10px;
-    display: flex;
-    max-width: 620px;
-    flex-grow: 1;
-    position: relative;
+  margin-left: 76px;
+  background: rgba(238, 238, 238, 0.71);
+  border-radius: 10px;
+  display: flex;
+  max-width: 620px;
+  flex-grow: 1;
+  position: relative;
 }
 
 .search-input {
-    background-color: transparent;
-    border: none;
-    width: 100%;
-    padding: 13px 20px;
-    
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  padding: 13px 20px;
 }
 
 .search-button {
-    background-color: transparent;
-    border: none;
-    position: absolute;
-    top: 0;
-    right: 0;
-    padding-left: 18px;
-    padding-right: 18px;
-    height: 100%;
-    cursor: pointer;
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding-left: 18px;
+  padding-right: 18px;
+  height: 100%;
+  cursor: pointer;
 }
 
 .auth {
-    margin-left: auto;
+  margin-left: auto;
 }
 
 .login {
-    background: #EBEBEB;
-    border-radius: 50px;
-    padding: 16px 30px;
-    display: block;
-    text-decoration: none;
-    color: #000000;
-    font-size: 14px;
-    line-height: 16px;
+  background: #ebebeb;
+  border-radius: 50px;
+  padding: 16px 30px;
+  display: block;
+  text-decoration: none;
+  color: #000000;
+  font-size: 14px;
+  line-height: 16px;
 }
 
 .shopping-cart {
-    width: 49px;
-    height: 49px;
-    border-radius: 50%;
-    background: #F66A15;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 30px;
-    text-decoration: none;
-    position: relative;
+  width: 49px;
+  height: 49px;
+  border-radius: 50%;
+  background: #f66a15;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 30px;
+  text-decoration: none;
+  position: relative;
 }
 
 .shopping-counter {
-    background-color: #FFAF19;
-    font-size: 8px;
-    line-height: 9px;
-    color: #000000;
-    display: block;
-    padding: 5px;
-    border-radius: 50%;
-    position: absolute;
-    right: 0;
-    bottom: 0;
+  background-color: #ffaf19;
+  font-size: 8px;
+  line-height: 9px;
+  color: #000000;
+  display: block;
+  padding: 5px;
+  border-radius: 50%;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+
+.slide {
+  position: relative;
+  border-radius: 20px;
+  min-height: 400px;
+  display: flex;
+  align-items: center;
+  padding: 100px;
+  overflow: hidden;
+}
+
+.slide::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0.43) 40.45%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
+
+.slide-content {
+  max-width: 400px;
+  position: relative;
+}
+
+.slide-title {
+  margin-top: 0;
+  margin-bottom: 15px;
+  font-weight: bold;
+  font-size: 50px;
+  line-height: 51px;
+}
+
+.slide-text {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 23px;
+  margin-bottom: 30px;
+}
+
+.slide-text-light {
+  background-color: thistle;
+  color: white;
+}
+
+.button {
+  border-radius: 25px;
+  padding: 12px 50px;
+  display: inline-block;
+  text-decoration: none;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 23px;
+}
+
+.button-primary {
+  background: #f47322;
+  color: white;
+}
+
+.button-default {
+  background-color: #fff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  color: #5f5f61;
+}
+
+.slide-summer {
+  background-image: url("../img/summer.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.promo {
+  padding-top: 50px;
+  padding-bottom: 50px;
+  display: flex;
+  justify-content: space-between;
+  margin: -20px;
+}
+
+.card {
+  margin: 20px;
+  flex: 50%;
+  border-radius: 20px;
+  overflow: hidden;
+  position: relative;
+  padding: 32px;
+  max-width: 570px;
+  min-height: 380px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card-text-light {
+  color: #fff;
+}
+
+.card::before {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3));
+}
+
+.card-title {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 23px;
+  margin-top: 4px;
+  margin-bottom: 21px;
+}
+
+.card-text {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  max-width: 200px;
+}
+
+.card-price {
+  display: block;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 23px;
+  margin-bottom: 8px;
+}
+
+.card-delivery {
+  display: block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  margin-bottom: 25px;
+}
+
+.card-image {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+}
+
+.section-title {
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 23px;
+  margin-top: 0;
+  margin-bottom: 47px;
+}
+
+.delivery-week {
+  padding: 100px 0;
+}
+
+.delivery-cards {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -15px;
+}
+
+.delivery-card {
+  margin: 15px;
+  width: 275px;
+  height: 182px;
+  border-radius: 18px;
+  overflow: hidden;
+  position: relative;
+}
+
+.delivery-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.delivery-tag {
+  position: absolute;
+  left: 10px;
+  top: 16px;
+  border-radius: 30px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+
+  padding: 5px 10px;
+}
+
+.tag-health {
+  background: #d0fd89;
+  color: #49494f;
+}
+
+.tag-veg {
+  background: #aebc41;
+  color: #fff;
+}
+
+.tag-meat {
+  background: #b86b78;
+  color: #fff;
+}
+
+.tag-bird {
+  background: #d68334;
+  color: #fff;
+}
+
+.tag-fish {
+  background: #cd6255;
+  color: #fff;
+}
+
+.tag-kids {
+  background: #fffdbf;
+  color: #49494f;
+}
+
+.tag-parents {
+  background: #f6fdc8;
+  color: #49494f;
+}
+
+.tag-hollydays {
+  background: #fef7fe;
+  color: #49494f;
+}
+
+.section-grey {
+  background: #f6f6f6;
+}
+
+.category {
+  padding-top: 40px;
+  padding-bottom: 60px;
+}
+
+.tabs {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  margin-bottom: 62px;
+}
+
+.tabs-link {
+  font-size: 20px;
+  line-height: 23px;
+  color: #49494f;
+  margin-right: 58px;
+  text-decoration: none;
+}
+
+.tabs-link.active {
+  color: #f37321;
+}
+
+.tabs-content {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -19px;
+}
+
+.tabs-card {
+  max-width: 270px;
+  border-radius: 20px;
+  overflow: hidden;
+  background-color: #fff;
+  margin: 19px;
+}
+
+.tabs-image {
+  max-width: 100%;
+}
+
+.tabs-card-content {
+  position: relative;
+  padding: 23px;
+}
+
+.tabs-item {
+  margin: 0;
+  margin-bottom: 13px;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+}
+
+.tabs-text {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 23px;
+  color: #b9b9be;
+}
+
+.tabs-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.tabs-price {
+  display: block;
+  font-weight: 500;
+  font-size: 23px;
+  line-height: 23px;
+  color: #4b4b51;
+  margin-bottom: 5px;
+}
+
+.tabs-weight {
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 20px;
+  color: #aaaab1;
+}
+
+.button-outline {
+  background-color: transparent;
+  border: 2px solid #f37321;
+  box-sizing: border-box;
+  border-radius: 33px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  color: #f37321;
+  padding: 15px 25px;
+}
+
+.button-center {
+  display: block;
+  margin: auto;
+  margin-top: 60px;
+  width: 315px;
+  cursor: pointer;
+}
+
+.category-advantage {
+  margin: 100px;
+  margin-bottom: 182px;
+}
+
+.advantage-content {
+  display: flex;
+  margin: -19px;
+}
+
+.agvantage-card {
+  max-width: 270px;
+  border: 1px solid #e9e9e9;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
+  border-radius: 18px;
+  text-align: center;
+  margin: 19px;
+}
+
+.advantage-image {
+  padding: 30px 105px;
+}
+
+.advantage-item {
+  margin: 4px 38px 13px 44px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 23px;
+  color: #000000;
+}
+
+.advantage-text {
+  font-size: 14px;
+  line-height: 22px;
+  color: #49494f;
+  margin: 23px;
+}
+
+.footer {
+  padding: 40px 0;
+  background: #f6f6f6;
+}
+
+.footer-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.footer-logo {
+  margin-right: 50px;
+}
+
+.footer-link {
+  font-size: 16px;
+  line-height: 23px;
+  color: #000000;
+  margin-right: 50px;
+}
+
+.social-links {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+
+.social-link {
+  text-decoration: none;
+  margin-left: 20px;
 }
