--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,22 @@ body {
   line-height: 51px;
 }
 
+.slider-buttons {
+  position: absolute;
+  right: 46px;
+  bottom: 40px;
+  z-index: 5;
+  display: flex;
+  align-items: center;
+  width: 100px;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.swiper {
+  position: relative;
+}
+
 .slide-text {
   font-weight: bold;
   font-size: 16px;
@@ -164,6 +180,18 @@ body {
 
 .slide-summer {
   background-image: url("../img/summer.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.slide-autumn {
+  background-image: url("../img/d83e5ca6fa033c54db53987fa14bacd6.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.slide-vita {
+  background-image: url("../img/vita.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -441,8 +469,8 @@ body {
   cursor: pointer;
 }
 
-.category-advantage {
-  margin: 100px;
+.advantage {
+  margin-top: 100px;
   margin-bottom: 182px;
 }
 
@@ -510,4 +538,74 @@ body {
 .social-link {
   text-decoration: none;
   margin-left: 20px;
+}
+
+@media (max-width: 1260px) {
+  .container {
+    max-width: 960px;
+  }
+  .search-form {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+  .tabs-content {
+    flex-wrap: wrap;
+  }
+  .tabs-card {
+    flex: 50%;
+    max-width: calc(50% - 40px);
+  }
+  .advantage-content {
+    flex-wrap: wrap;
+  }
+  .agvantage-card {
+    flex: 50%;
+    max-width: calc(50% - 40px);
+  }
+}
+
+@media (max-width: 960px) {
+  .container {
+    max-width: 750px;
+  }
+  .slide {
+    padding: 70px;
+  }
+  .delivery-card {
+    width: calc(50% - 40px);
+  }
+  .footer-logo {
+    margin-right: 40px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    max-width: 560px;
+  }
+  .header {
+    flex-wrap: wrap;
+  }
+  .search-form {
+    order: 5;
+    margin: 15px 0;
+  }
+  .promo {
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    max-width: 90%;
+  }
+  .tabs-card {
+    max-width: 100%;
+  }
+  .delivery-card {
+    width: 100%;
+  }
+  .agvantage-card {
+    max-width: 100%;
+  }
 }
